[tool.poetry]
name = "playground-pythonmonkey"
version = "0.1.0"
description = ""
authors = ["mogryo <tad.baikstis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pythonmonkey = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
